I fixed the background stretchgit add -A omfg

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -5,17 +5,22 @@
   
 }
 
+html {
+  min-height: 100%;
+  background-image: url("/static/images/6512217.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-weight: thin 100;
+
+}
+
 body {
-    min-height: 100vh;
-    background-color: black;
-    background-image: url("/static/images/6512217.jpg");
-    background-position: center;
-    /* background-repeat: no-repeat; */
-    background-size: cover;
-    object-fit: initial;
-    color: white;
-    font-family: 'Raleway', sans-serif;
-    font-weight: thin 100;
+
 }
 
   ul {
@@ -304,6 +309,41 @@ img {
   .h-card:hover .hidden-p {
     opacity: 1;
     visibility: visible;
+  }
+
+  .comment-btn {
+    display: inline;
+   
+  }
+
+  .offer-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+  }
+
+  .offer-card  p,
+  a {
+    color: #fff;
+    text-shadow: 1px 1px 2px #4a085a;
+
+
+  }
+
+  .comment-content {
+    margin: 10px 20%;
+    
+  }
+
+
+  .offer-card {
+    backdrop-filter: blur(8px);
+    background-color: opacity(10%) #4a085a;
+    display: flex;
+    justify-content: center;
+    align-self: center;    
+
   }
 
   /* .home-cards.delay-hover .h-card a:hover .card--display {
